added multiple dynamic conditions

--- a/public/peripleo.config.json
+++ b/public/peripleo.config.json
@@ -10,9 +10,9 @@
 	  }
 	],
 	"facets": [
-	  { "name": "language", "path": ["relations", "lang"], "dynamicCondition": {"name": "manuscript", "path": "title"} },
-	  { "name": "manuscript", "path": ["relations", "title"], "dynamicCondition": {"name": "language", "path": "lang"} },
-	  { "name": "location", "path": ["relations", "label"], "dynamicCondition": {"name": "language", "path": "lang"} },
+	  { "name": "language", "path": ["relations", "lang"], "dynamicCondition": [{"name": "manuscript", "path": "title"}, {"name": "location", "path": "label"}] },
+	  { "name": "manuscript", "path": ["relations", "title"], "dynamicCondition": [{"name": "language", "path": "lang"}, {"name": "location", "path": "label"}] },
+	  { "name": "location", "path": ["relations", "label"], "dynamicCondition": [{"name": "language", "path": "lang"}, {"name": "manuscript", "path": "title"}] },
 	  "type"
 	],
 	"link_icons": [
