# deploy on prod with manual button in CI/CD -> Pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,8 @@ deploy:
     - ssh-add <(echo "$PROD_SSH_PRIVATE_KEY")
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - scp -r docs coreit@dataviz-mark16.vital-it.ch://home/coreit/dataviz/
-    # - ssh -t coreit@dataviz-mark16.vital-it.ch "rm -r /var/vhosts/sib.swiss/dataviz-mark16/htdocs/*"
-    # - scp -r docs coreit@dataviz-mark16.vital-it.ch://var/vhosts/sib.swiss/dataviz-mark16/htdocs/
+    - ssh -t coreit@dataviz-mark16.vital-it.ch "rm -r /var/vhosts/sib.swiss/dataviz-mark16/htdocs/*"
+    - scp -r docs coreit@dataviz-mark16.vital-it.ch://var/vhosts/sib.swiss/dataviz-mark16/htdocs/
   only:
     - main
   when: manual
